--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,17 +9,12 @@ textarea {
   font: inherit;
   color: hsl(36, 100%, 50%);
   background-color: white;
-  width: 100%;
   border: 0;
   outline: 0;
   resize: none;
   font-weight: 100;
   font-style: italic;
   font-size: 20px;
-}
-
-.hide {
-  display: none;
 }
 
 header {
@@ -39,7 +34,7 @@ header h1 {
 .contenido-principal {
   display: flex;
   flex-direction: column;
-  padding: 0 35px;
+  padding: 10px 35px;
   gap: 20px;
 }
 
@@ -97,7 +92,7 @@ header h1 {
   align-items: center;
   justify-content: center;
   gap: 10px;
-  border: 1px solid black;
+  box-shadow: 2px 3px 7px black;
   border-radius: 20px;
   padding: 25px;
   margin-bottom: 30px;
@@ -120,6 +115,7 @@ header h1 {
 #text-to-encrypt {
   text-align: center;
   padding: 0;
+  background-color: inherit;
 }
 
 #btn-copy {
@@ -127,6 +123,8 @@ header h1 {
   width: 50%;
   font-weight: bold;
   color: inherit;
+  background-color: hsl(36, 100%, 50%);
+  color: white;
 }
 
 footer {
@@ -149,11 +147,11 @@ footer {
   .contenido-principal {
     flex-direction: row;
     height: 100%;
+    padding: 33px 35px;
   }
 
   .contenido-principal > div {
     width: 100%;
-    padding: 50px;
   }
 
   .encrypted-text {
@@ -187,4 +185,8 @@ footer {
   .not-encrypted h1 {
     text-align: center;
   }
+}
+
+.hide {
+  display: none !important;
 }
