--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,11 @@
 body {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   background-color: hsl(0, 0%, 17%);
   color: hsl(0, 0%, 100%);
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
 }
 
 textarea {
@@ -26,9 +30,9 @@ header {
 }
 
 header h1 {
-  font-size: 48px;
+  font-size: 28px;
   font-weight: bold;
-  font-family: "Rubik Vinyl", cursive;
+  font-family: 'Rubik Vinyl', cursive;
 }
 
 .contenido-principal {
@@ -45,6 +49,7 @@ header h1 {
 }
 
 .text-to-encrypt textarea {
+  width: 100%;
   background-color: white;
   height: 200px;
   margin-bottom: 20px;
@@ -134,12 +139,6 @@ footer {
 }
 
 @media screen and (min-width: 900px) {
-  body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
-
   .icon-alura {
     padding: 0;
   }
