--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,10 +2,17 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
   background-color: hsl(0, 0%, 17%);
   color: hsl(0, 0%, 100%);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+}
+
+.container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  justify-content: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  height: 100%;
 }
 
 textarea {
@@ -59,24 +66,27 @@ header h1 {
 .advert {
   display: flex;
   flex-direction: row;
-  align-items: center;
   gap: 10px;
   margin-bottom: 20px;
+  justify-content: center;
+  align-items: center;
 }
 
 .buttons {
   width: 100%;
   display: flex;
+  flex-direction: column;
   gap: 20px;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn {
   width: 100%;
   padding: 20px;
-  border-radius: 25px;
   border: 1px solid hsl(36, 100%, 50%);
-  background-color: white;
-  cursor: pointer;
+  border-radius: 25px;
+
   font-size: 20px;
   font-weight: bold;
 }
@@ -158,6 +168,10 @@ footer {
     align-items: center;
     justify-content: flex-end;
     padding: 0 !important;
+  }
+
+  .buttons {
+    flex-direction: row;
   }
 
   .text-to-encrypt {
